--- a/portfolio-page/portfolio.css
+++ b/portfolio-page/portfolio.css
@@ -28,3 +28,29 @@ header{
     margin-left: 10%;
     margin-right: 10%;
 }
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1{
+    margin: 2rem 0 2rem 0;
+}
+
+.main-content{
+    display: flex;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: center;
+    gap: 5rem;
+}
+
+.content img{
+    width: 100%;
+}
+
+ul li{
+    list-style: none;
+}
